<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="50"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right">

                <TextView
                    android:id="@+id/tv_voter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vote"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/vote"
                    android:textStyle="bold|italic"
                    />
                <TextView
                    android:id="@+id/tv_vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Vote"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/vote"
                    android:textStyle="bold|italic"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/judul"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_title"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="Title"
                android:textStyle="italic"
                android:textSize="15sp"
                android:textColor="#000"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/popularity"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_popularity"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="Popularity"
                android:textStyle="italic"
                android:textSize="15sp"
                android:textColor="#000"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/Release_date"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="Date"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/Overview"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_overview"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="Overview"
                android:textStyle="italic"
                android:textSize="15sp"
                android:textColor="#000"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>